⚡️ build!(core): upgrade to java 21 and adopt virtual threads
- update java target and minimum toolchain to version 21 in build configuration
- add `VirtualThreadUtil` to provide high-performance virtual thread-based executors
- refactor schedulers, event executors, and network threads to use virtual threads
- this improves concurrency and performance for I/O-bound tasks throughout the application

BREAKING CHANGE: The project now requires Java 21 or later to build and run.

⚡️ perf(json): migrate from gson to jackson for core json processing

- introduce `JacksonUtil` as a high-performance replacement for `GsonUtil`
- add jackson dependencies to the project build configuration
- refactor `HttpAPIImpl` to use jackson for parsing api responses, improving performance

✅ test(framework): introduce comprehensive testing and benchmarking suite

- add a full suite of unit tests using JUnit 5, Mockito, and AssertJ for core components
- configure JaCoCo for code coverage reporting and set coverage verification goals
- set up JMH (Java Microbenchmark Harness) for performance benchmarking
- add benchmark tests for virtual threads vs platform threads and jackson vs gson

 docs(architecture): add extensive project and module architecture documentation

- create detailed markdown documents for a project overview and key modules
- document the architecture of the core, command, entity, event, network, and plugin systems
- use mermaid diagrams to illustrate system design, class relationships, and data flows